# OAProgressionMMF

./: .gitignore  README.md  apptainer.def  env_base.yml  pyproject.toml  runner.sh
koafusion/datasets/: __init__.py  _data_provider.py  _mr_t2_mapping.py
koafusion/datasets/oai/: _dataset.py
koafusion/models/: __init__.py  _core_fes.py  _core_trf.py  _mrN_cnn_trf.py  _torchvision.py  _xr1_cnn.py  _xr1mrN.py  _xrNmrMcP.py
koafusion/preproc/: __init__.py  _np_nd.py  _pt.py  _various.py
koafusion/run/: Analysis_Visualization.ipynb  Targets_meta_and_scans_from_OAI.ipynb  eval_prog_fus.py  prepare_data_mri_oai.py  prepare_data_xr_oulu.py  train_prog_clin.py  train_prog_fus.py
koafusion/run/conf/: prog_clin.yaml  prog_fus.yaml
koafusion/run/conf/model/: mr1_cnn_trf.yaml  mr2_cnn_trf.yaml  xr1_cnn.yaml  xr1mr1_cnn_trf.yaml  xr1mr2_cnn_trf.yaml  xr1mr2c1_cnn_trf.yaml
koafusion/various/: __init__.py  _checkpoint.py  _formats.py  _losses.py  _metrics_stat_anlys.py  _metrics_wissam.py  _optimizers.py
